--- a/app/assets/stylesheets/pages/_bookings_show.scss
+++ b/app/assets/stylesheets/pages/_bookings_show.scss
@@ -1,57 +1,61 @@
 .banner-info {
- font-family: 'Share Tech Mono', monospace;
-  // padding-left: 80px;
   font-size: 25px;
-    color: #ffffff;
-    text-align: center;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: #daf6ff;
-    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
-    padding-left: 50px;
+  color: #ffffff;
+  text-align: center;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #daf6ff;
+  text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
+  padding-left: 50px;
 }
+
 .bannerx {
   background-size: cover;
   height: calc(50vh - 46px);
   background-position: center;
   display: flex;
   align-items: center;
-  // margin-top: 68px;
 }
+
 .big-box {
   display: flex;
   flex-direction: column;
 }
+
 .middle {
   position: relative;
   height: 400px;
 }
+
 .bottom {
   display: flex;
   flex-direction: column;
-  // justify-content: space-around;
   margin-top: 60px;
-  h3{
+
+  h3~{
   font-size: 60px;
   color:#808080;
   }
+
   p {
     font-size: 44px;
     color:#808080;
   }
+
   .btn-primary{
     width: 20%;
     padding: 10px;
     margin: 10px;  }
-}
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+  }
+
 /*Just the background stuff */
 .mid-container{
   display: flex;
   justify-content: space-around;
-/* The card */
+
+  /* The card */
   .cardx {
     position: relative;
     height: 450px;
@@ -60,17 +64,19 @@
     background-color: #FFF;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     border-radius: 8px;
+
     #my-confirmation{
-    display: flex;
-    justify-content: flex-end;
-    font-weight: 700;
-    padding: 16px 0;
-    padding-right: 56px;
-    color: #FFFFFF;
-    font-size: 18px;
-    background-color: #6ECAD6;
-    border-radius: 8px 8px 0 0;
+      display: flex;
+      justify-content: flex-end;
+      font-weight: 700;
+      padding: 16px 0;
+      padding-right: 56px;
+      color: #FFFFFF;
+      font-size: 18px;
+      background-color: #6ECAD6;
+      border-radius: 8px 8px 0 0;
     }
+
   /* Image on the left side */
   .thumbnail {
     float: left;
@@ -82,6 +88,7 @@
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
+
   /*object-fit: cover; */
   /*object-position: center; */
   img.left {
@@ -94,32 +101,38 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
   }
+
   /* Right side of the card */
   .right {
     display: flex;
     align-items: flex-end;
     flex-direction: column;
     padding-right: 24px;
+
     h2 {
       padding-left: 30px;
     }
   }
+
   h1 {
     padding-top: 15px;
     font-size: 3.0rem;
     color: #4B4B4B;
   }
+
   .author {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
+
   .booking-description {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-right: 70px;
   }
+
   .author > img {
     margin-left: 8px;
     float: left;
@@ -127,15 +140,18 @@
     width: 72px;
     border-radius: 50%;
   }
+
   h2 {
     padding-top: 8px;
     margin-right: 6px;
     text-align: right;
     font-size: 1.8rem;
   }
+
   h3{
     font-size: 5rem;
   }
+
   p {
     padding-top: 10px;
     font-size: px;
@@ -143,20 +159,24 @@
     color: #4B4B4B;
     word-wrap: break-word;
   }
+
   /* DATE of release */
   h5 {
     font-size: 6rem;
     color: #C3C3C3;
   }
+
   h6 {
     font-size: 2rem;
     color: #C3C3C3;
   }
+
   /* Those futur buttons */
   ul {
     margin-top:20px;
     margin-left: 50px;
   }
+
   li {
     display: inline;
     list-style: none;
@@ -165,6 +185,7 @@
     font-size: 4rem;
     color: #6ECAD6;
   }
+
   /* Floating action button */
   .fab {
     position: absolute;
@@ -180,7 +201,9 @@
     text-align: center;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  }.fab1 {
+  }
+
+  .fab1 {
     position: absolute;
     right: 140px;
     bottom: -40px;
@@ -194,7 +217,9 @@
     text-align: center;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  }.fab2 {
+  }
+
+  .fab2 {
     position: absolute;
     right: 230px;
     bottom: -40px;
@@ -208,7 +233,9 @@
     text-align: center;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  }.fab3 {
+  }
+
+  .fab3 {
     position: absolute;
     right: 320px;
     bottom: -40px;
@@ -223,10 +250,12 @@
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
-  .fa-3x{
+
+  .fa-3x {
     font-size: 1.6em;
   }
-  }
+}
+
   .abso {
     position: absolute;
     top: 290px;
@@ -235,10 +264,12 @@
     border-radius: 0px 8px 8px 0;
     margin-top: 40px;
     color: #FFFFFF;
+
     h2 {
       text-align: center;
       font-weight: 700;
     }
+
     h4 {
       font-size: 1.2rem;
       text-align: center;
