--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,9 +2,8 @@
 @import "home";
 @import "profile";
 @import "user_index";
-@import "chatroomsshow";
+@import "chatrooms_show.scss";
 @import "bookings_show";
-@import "usersshow";
 @import "user_show";
 @import "show_modal";
 @import "payments_new";
