--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,9 +1,8 @@
-<% if @message.errors.any? %>
-<% else %>
+<% unless @message.errors.any? %>
   messagesContainer = document.querySelector('.messages');
   messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message, user_is_messages_author: true %>');
   input = document.querySelector('#message_content');
   input.value = '';
-  // input.blur();
-      scrollLastMessageIntoView();
+
+  scrollLastMessageIntoView();
 <% end %>
