--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,5 +1,5 @@
-<!-- app/views/payments/new.html.erb -->
 <h1>Purchase of therapy session <%= @booking.therapist_id %></h1>
+
 <%= form_tag booking_payments_path(@booking) do %>
   <article>
     <label class="amount">
@@ -7,12 +7,12 @@
     </label>
   </article>
 
-
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
     data-name="My Session"
     data-email="<%= current_user.email %>"
     data-description="Session <%= @booking.therapist_id %>"
     data-amount="<%= @booking.amount_cents %>"
-    data-currency="<%= @booking.amount.currency %>"></script>
+    data-currency="<%= @booking.amount.currency %>">
+  </script>
 <% end %>
