--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -7,8 +7,10 @@
           <%= f.input :start_time %>
         </div>
         <div class="form-inputs">
-          <%= f.input :description, label: 'Message the therapist',
-          placeholder: "Briefly describe your story so the therapist can provide the best support...", input_html: { class: 'input-description'} %>
+          <%= f.input :description,
+                      label: 'Message the therapist',
+                      placeholder: "Briefly describe your story so the therapist can provide the best support...",
+                      input_html: { class: 'input-description'} %>
         </div>
         <div class="form-actions">
           <div class="booking-update-btn">
