--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,16 +24,22 @@
           <li class="nav-item">
             <%= link_to "Contact Us" %>
           </li>
-
         </div>
         <ul class="nav-item dropdown">
-          <%= cl_image_tag current_user.photo.url, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= cl_image_tag current_user.photo.url,
+              class: "avatar dropdown-toggle",
+              id: "navbarDropdown",
+              data: { toggle: "dropdown" },
+              'aria-haspopup': true,
+              'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Settings", "#", class: "dropdown-item black" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item black" %>
-          </ul>
+            <%= link_to "Log out",
+                destroy_user_session_path,
+                method: :delete,
+                class: "dropdown-item black" %>
           </div>
-        </li>
+        </ul>
       <% else %>
         <li class="nav-item">
           <div class="login-home">
@@ -43,7 +49,4 @@
       <% end %>
     </ul>
   </div>
-</div>
-</ul>
-</div>
 </div>
