--- a/app/views/shared/_navbar_pages.html.erb
+++ b/app/views/shared/_navbar_pages.html.erb
@@ -27,13 +27,18 @@
 
         </div>
         <ul class="nav-item dropdown">
-          <%= cl_image_tag current_user.photo.url, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= cl_image_tag current_user.photo.url,
+          class: "avatar dropdown-toggle",
+            id: "navbarDropdown",
+            data: { toggle: "dropdown" },
+            'aria-haspopup': true,
+            'aria-expanded': false %>
+
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Settings", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </ul>
           </div>
-        </li>
+        </ul>
       <% else %>
         <li class="nav-item">
           <div class="login-home">
@@ -43,7 +48,4 @@
       <% end %>
     </ul>
   </div>
-</div>
-</ul>
-</div>
 </div>
