--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,9 +115,11 @@
     </div>
 
     <div class="middle-info">
-      <h1>Meaningful therapy from every device</h1>
+      <h1>Easy access to therapy</h1>
 
-      <p>It can be difficult to wait days or weeks until your next appointment. With Sessions, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
+      <p>While leading a busy life, it's often difficult to arrange a short-term appointment with a therapist. At Sessions, we provide you
+        easy access to a range of professional therapists so that you can book a session at for a convenient time and have your appointment
+      through video-chat wherever you are.</p>
 
       <div class="info-img">
         <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552405536/appstore_2.png" alt="">
@@ -126,7 +128,7 @@
     </div>
   </div>
   <div class="middle-img">
-    <%= image_tag "devices.png" %>
+    <%= image_tag "landing_page.jpeg" %>
   </div>
 </div>
 
