fixed image landing page bottom

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -128,7 +128,7 @@
     </div>
   </div>
   <div class="middle-img">
-    <%= image_tag "landing_page.jpeg" %>
+    <%= cl_image_tag "https://res.cloudinary.com/dnqrlagsz/image/upload/v1553013597/landing_page.jpg" %>
   </div>
 </div>
 
