fixing meta description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
 
     <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
+    <meta name="description" content= "Find a specialist, start your therapy and change your life - wherever you are.">
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="<%= meta_image %>" />
-    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:description" content= "Find a specialist, start your therapy and change your life - wherever you are.">
     <meta property="og:site_name" content="<%= meta_title %>" />
 
     <!-- Twitter Card data -->
