--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= https://res.cloudinary.com/dnqrlagsz/image/upload/v1553155787/cover.png %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
     <meta property="og:description" content= "Find a specialist, start your therapy and change your life - wherever you are.">
     <meta property="og:site_name" content="<%= meta_title %>" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="<%= meta_title %>">
     <meta name="twitter:description" content="Find a specialist, start your therapy and change your life - wherever you are.">
     <meta name="twitter:creator" content="<%= DEFAULT_META["@sessionsforall"] %>">
-    <meta name="twitter:image:src" content="<%= https://res.cloudinary.com/dnqrlagsz/image/upload/v1553155787/cover.png %>">
+    <meta name="twitter:image:src" content="<%= meta_image %>">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
